--- a/Ch1_Degradation_abcoverNMDS.Rmd
+++ b/Ch1_Degradation_abcoverNMDS.Rmd
@@ -50,7 +50,6 @@ glimpse(abcover_full_raw %>%  na.omit())
 # Rows: 2,063
 # Columns: 10
 
-
 # Renaming observations
 ab_diversity <- abcover_full_raw %>%
   #dplyr::select(!c(species == "bare_ground")) 
@@ -81,33 +80,60 @@ ab_diversity <- abcover_full_raw %>%
             "intact", "matrix", "degraded")) %>% 
    mutate(site = fct_relevel(site, 
             "Intact1", "Intact2", "Intact3", "ENH1",    "ENH2", "DEG1",    "DEG2")) %>% 
-   na.omit() 
+  filter(species !="native_litter" ) %>% 
+  filter(species != "nonnative_thatch") %>% 
+  filter(species != "bare_ground") 
 
 sort(unique(ab_diversity$species))
 sort(unique(ab_diversity$site))
+glimpse(ab_diversity)
+#Rows: 1,450
+#Columns: 10
 
 # combine site and rep to one column
 ab_diversity$site_rep <- paste(ab_diversity$site, ab_diversity$rep, sep="_") 
-sort(unique(ab_diversity$site_rep))
-
-# Renaming observations - another way to rename observations
-# ab_diversity <- abcover_full_raw %>%
-#   mutate(species = case_when(
-#     species == "Avena barbata dead" ~ "Avena barbata",
-#     species == "Bromus rubens dead" ~ "Bromus rubens",
-#        species == "Bromus diandrus dead" ~ "Bromus diandrus",
-#     species == "Bromus rubens dead" ~ "Bromus rubens",
-#     TRUE ~ as.character(species)  # Keep other observations unchanged
-#   ))
+ab_diversity$site_rep_species <- paste(ab_diversity$site_rep, ab_diversity$species, sep="_") 
+sort(unique(ab_diversity$site_rep)) 
+#"DEG1_1"    "DEG1_2"    "DEG1_3"    "DEG2_4"    "DEG2_5"    "DEG2_6"    
+#"ENH1_1"    "ENH1_2"    "ENH1_3"    "ENH2_4"    "ENH2_5"    "ENH2_6"    
+#"Intact1_1" "Intact2_2" "Intact3_3"
 
 glimpse(ab_diversity)  # species diversity from point-line intercept transect
-# Rows: 2,060
-# Columns: 10
+# Rows: 1,445
+#Columns: 10
 
 ab_diversity <- ab_diversity %>% 
   dplyr::select(!c(distance, vertical))
 
-write.csv(ab_diversity, "processed/ab_diversity.csv")
+# write.csv(ab_diversity, "processed/ab_diversity.csv")
+```
+
+```{r figure point intercept transect sppr by nn cover}
+
+ab_diversity # species richness from point intercept transects
+nativecover <- read.csv("processed/abcover_nativecover_nngrasscover.csv") # native percent cover from ch1_standdeg_canopy.Rmd
+nncover <- read.csv("processed/abcover_nonnativecover_nngrasscover.csv") # non-native percent cover from ch1_standdeg_canopy.Rmd
+
+glimpse(ab_diversity)
+# Rows: 1,450
+# Columns: 8
+
+nativecover <- nativecover %>% 
+  dplyr::select(!c(X, standtype.x, standtype.y ))
+nncover <- nncover %>% 
+  dplyr::select(c(site_rep, percentcover_nonnative))
+
+ab_diversity_2_native <- ab_diversity_2 %>% # join above ground species diversity with native transect percent cover
+  left_join(nativecover, by = "site_rep")
+ab_diversity_2_native_nn <- ab_diversity_2_native %>% # join above ground species diversity with non-native transect percent cover
+  left_join(nncover, by = "site_rep")
+
+view(ab_diversity_2_native_nn)
+glimpse(ab_diversity_2_native_nn)
+# Rows: 2,018
+# Columns: 20
+
+
 ```
 
 
@@ -119,39 +145,34 @@ sort(unique(belttrans_byspecies$species))
 
 belttrans_sppr <- belttrans_byspecies %>%  
    mutate(species = case_when(
-    species == "Erodium cicutarium" ~ "Erodium spp",
-        species == "Bromus diandrus dead" ~ "Bromus diandrus", 
-           species == "Bromus rubens dead" ~ "Bromus rubens", 
-       species == "Bromus spp." ~ "Bromus rubens", 
-    species == "Bromus spp. dead" ~ "Bromus rubens",
-          species == "Bromus madritensis" ~ "Bromus rubens",
-     species == "Centaurea melitensis dead" ~ "Centaurea melitensis",
-    species == "Erodium cicutarium" ~ "Erodium spp.", 
-    species == "Elymus condensatus dead" ~ "Elymus condensatus",
-    species == "Heteromeles arbutifolia dead" ~ "Heteromeles arbutifolia",
-    species == "Hirschfeldia incana dead" ~ "Hirschfeldia incana",
-    species == "Malacothamnus fasciculatus dead" ~ "Malacothamnus fasciculatus",
-           species == "Salvia leucophylla dead" ~ "Salvia leucophylla",
-      species == "Stipa lepida dead" ~ "Stipa lepida",
+    species == "Bromus madritensis" ~ "Bromus rubens", 
+        species == "Erodium cicutarium" ~ "Erodium spp",      
+#    species == "Lupinus spp." ~ "Lupinus bicolor", # lupins are in different transects so leaving as three seperate entries: LUBI, LUSU, and Lupinus spp.
+#     species == "Lupinus spp." ~ "Lupinus succulentus",
     TRUE ~ as.character(species)  # Keep other observations unchanged
-  )) 
-
-#beltrans_density <- read.csv("processed/shrubdensitylife_transposed.csv", header = TRUE, na.strings=c("","NA"))
-
-beltrans_sppr <- beltrans_sppr %>% 
-  dplyr::select(!c("X"))
+  )) %>% 
+    rename(rep = transectstand, #rename(new_name = old_name) 
+           status = origin) 
+  
 
 # combine site and rep to one column
-beltrans_sppr$site_rep <- paste(beltrans_sppr$site, beltrans_sppr$rep, sep="_") 
+belttrans_sppr$site_rep <- paste(belttrans_sppr$site, belttrans_sppr$rep, sep="_") 
+belttrans_sppr$site_rep_species <- paste(belttrans_sppr$site_rep, belttrans_sppr$species, sep="_") 
 
-glimpse(beltrans_sppr)
-sort(unique(beltrans_sppr$site_rep))
-sort(unique(beltrans_sppr$species))
+belttrans_sppr <- belttrans_sppr %>% 
+  dplyr::select(!c("transectsite", "lifestage"))
 
-write.csv(beltrans_sppr, "processed/beltrans_sppr.csv")
+glimpse(belttrans_sppr)
+sort(unique(belttrans_sppr$site_rep))
+sort(unique(belttrans_sppr$species))
+
+write.csv(belttrans_sppr, "processed/belttrans_sppr.csv")
 ```
 
+# Join transect and belt sppr.
 ```{r species richness above ground, include=TRUE}
+
+# created ab_diversity_2 in EXCEL
 
 ab_diversity_2 <- read.csv("processed/ab_diversity_2.csv", header = TRUE, na.strings=c("","NA")) # combined point-intercept transect and belt transect species diversity
 nativecover <- read.csv("processed/abcover_nativecover_nngrasscover.csv") # native percent cover from ch1_standdeg_canopy.Rmd
