--- a/ch1_standdeg_canopy.Rmd
+++ b/ch1_standdeg_canopy.Rmd
@@ -302,7 +302,7 @@ abcover_vegcover_plot <- ggplot(abcover_vegcover_meanSD, aes(x = site, y = mean_
  #   limits=c("intact", "matrix", "degraded"),
  #   labels=c("intact" = "Intact", "matrix" = "Matrix", "degraded" = "Degraded")
  #   )
-abcover_vegcover_plot
+# abcover_vegcover_plot
 ```
 
 
@@ -423,6 +423,11 @@ abcover_nativecover <- abcover_full_v %>%
                   percentcover_native = length(unique(distance))/41
                   )
 view(abcover_nativecover)
+
+cover_statuslf_matrix <- read.csv("percentcover_bystatus_bylifeform_matrix.csv", header = TRUE) %>% mutate(lifeform = case_when(lifeform == "herb" ~ "forb", TRUE ~ lifeform))
+cover_statuslf_matrix <- cover_statuslf_matrix %>% 
+  mutate(standtype = fct_relevel(standtype, 
+            "intact", "matrix", "degraded"))
 view(cover_statuslf_matrix_wide1)
 
 abcover_nativecover_nngrasscover <- left_join(abcover_nativecover, cover_statuslf_matrix_wide1, by = "site_rep")
@@ -885,8 +890,7 @@ p1
 
 #write.csv(abcover_bylf_bystatus,"processed/percentcover_bystatus_bylifeform.csv")
 # GET RID OF ZEROS in df
-cover_statuslf_matrix <- read.csv("percentcover_bystatus_bylifeform_matrix.csv", header = TRUE) %>% mutate(lifeform = case_when(lifeform == "herb" ~ "forb", 
-                               TRUE ~ lifeform))
+cover_statuslf_matrix <- read.csv("percentcover_bystatus_bylifeform_matrix.csv", header = TRUE) %>% mutate(lifeform = case_when(lifeform == "herb" ~ "forb", TRUE ~ lifeform))
 cover_statuslf_matrix <- cover_statuslf_matrix %>% 
   mutate(standtype = fct_relevel(standtype, 
             "intact", "matrix", "degraded"))
@@ -899,10 +903,35 @@ abcover_byfamily <- abcover_full_v_omitground %>%
   group_by(standtype, site, rep, site_rep, family) %>% 
   #group_by(standtype, site, rep, site_rep, family, lifeform, status) %>% 
   dplyr::summarize(
-    count_per_transect = n_distinct(site_rep_dist), 
-    percentcover = (n_distinct(site_rep_dist)/41)*100
-    )
-view(abcover_byfamily) # prints to new tab
+    count_per_transect = n_distinct(site_rep_dist))
+
+# view(abcover_byfamily) # prints to new tab
+
+abcover_transect_count <- abcover_byfamily %>%
+  group_by(site_rep) %>%
+  dplyr::summarize(total_by_transect = sum(count_per_transect))
+
+abcover_byfamily_percent <- abcover_byfamily %>%
+  left_join(abcover_transect_count, by = c("site_rep")) %>%
+  mutate(percent_cover = (count_per_transect/total_by_transect)*100) %>%
+  dplyr::select(!c(total_by_transect, count_per_transect))
+
+# view(abcover_byfamily_percent) # prints to new tab
+
+#this is with just the counts
+ggplot(abcover_byfamily, aes(fill=family, y=count_per_transect, x=site_rep)) + 
+  geom_bar(position="fill", stat="identity") +
+  ggtitle("Relative Percent Cover by Count") +
+  labs(x="Transect", y="Percent Cover") +
+  theme(axis.text.x = element_text(angle = 90, vjust = 0.5, hjust=1))
+
+#this is the percents we calculated
+ggplot(abcover_byfamily_percent, aes(fill=family, y=percent_cover, x=site_rep)) + 
+  geom_bar(position="stack", stat="identity") +
+  ggtitle("Relative Percent Cover by Count") +
+  labs(x="Transect", y="Percent Cover") +
+  theme(axis.text.x = element_text(angle = 90, vjust = 0.5, hjust=1))
+
 ```
 
 ### SEGMENTATION
